2020-08-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/peeph.def:
	  Improve parameter pushing.

2020-08-03 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/z80/peeph-z80n.def:
	  New rules to replcase push nn by ld rr,nn / push rr

2020-08-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peeph.def:
	  Use more indexed adressing where it makes sense.

2020-08-03 Sergey Belyashov <sergey.belyashov@gmail.com>

	* sim/ucsim/z80.src/z80.cc,
	  src/z80/gen.c,
	  support/regression/tests/z80n-push-nn.c:
	  Fix bug #3032: Something wrong with z80n push nn

2020-08-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/main.c,
	  src/stm8/gen.c:
	  Optimize signed division by small powers of 2.

2020-07-31 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/SDCCasm.c,
	  src/SDCCasm.h,
	  src/z80/main.c,
	  src/z80/mappings.i:
	  Apply patch #312: Initial support for GNU Assembler for Z80 port.

2020-07-31 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c,
	  support/regression/tests/bug-3083.c:
	  Fix bug #3083.

2020-07-31 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCpeeph.c: removed portIsDS390, fixed isPort() coding style
	* src/ds390/peeph.def: replaced portIsDS390 by isPort('ds390' 'ds400')

2020-07-30 Sergey Belyashov <sergey.belyashov@gmail.com>

	* src/z80/peeph.def:
	  Implement RFE #669: optimize out unnecessary JP instructions generated
	  by switch statement.

2020-07-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/main.c,
	  src/pdk/gen.h,
	  src/pdk/gen.c:
	  Fix bug #3091, patch by Free-PDK.
	* src/z80/gen.c,
	  support/regression/tests/bug-3090.c:
	  Fix bug #3090.

2020-07-27 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/stdatomic.h: enabled for ds390, force nonbanked for mcs51
	* device/lib/ds390/atomic_flag_clear.c,
	* device/lib/ds390/atomic_flag_test_and_set.c: new, added
	* device/lib/ds390/Makefile.in: added atomic_flag_*
	* device/lib/mcs51/atomic_flag_clear.asm,